--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
             </tr>
         </table>
         
-
-        Januári középhőmérséklet (-4,8 °C) jelentősen elmaradt az 1981-2010-es sokévi átlagtól
-        Ezt követően április és szeptember kivételével mindegyik hónap melegebb volt a megszokottnál.
-        Márciusban a havi átlag 3,6 °C kal magasabbnak adódott a normálnál.
-        Június +2,5 °C
-        Augusztus +2,2 °C
-        December +2,2 °C
-        2017-hez köthető az 5. legmelegebb nyár
-        Valamint a 12. legmelegebb tavasz
+<ul>
+       <li>Januári középhőmérséklet (-4,8 °C) jelentősen elmaradt az 1981-2010-es sokévi átlagtól</li>
+       <li>Ezt követően április és szeptember kivételével mindegyik hónap melegebb volt a megszokottnál.</li>
+       <li>Márciusban a havi átlag 3,6 °C kal magasabbnak adódott a normálnál.</li>
+       <li>Június +2,5 °C</li>
+       <li>Augusztus +2,2 °C</li>
+       <li>December +2,2 °C</li>
+       <li>2017-hez köthető az 5. legmelegebb nyár</li>
+       <li>Valamint a 12. legmelegebb tavasz</li>
+    </ul>
 <hr>
 
         <h2>Csapadék</h2>
@@ -47,12 +48,13 @@
                 <td> <p class="szurke">Havi csapadékösszegek 2017-ben és az 1981-2010-es átlagértékek (mm)</p></td>
             </tr>
         </table>
-        
+   <ul>    
         Március
         2017 márciusa a szokásosnál szárazabb volt, az országos átlag 22,2 mm, ami az 1981-2010-es sokévi átlag csupán 64 %-a. A csapadék leginkább a középső országrészre koncentrálódott, 40-50 mm feletti értékeket eredményezve. Gerecse-tetőn regisztráltuk a legnagyobb havi összeget, 64 mm-rel. Az ország északkeleti és nyugati részein jelentkezett a legkisebb csapadékösszeg, az Őrség egyes részein 5 mm alatti értéket mértünk.
         Szeptember
         A hónap meglehetősen csapadékosnak bizonyult, homogenizált adatok szerint az országos havi csapadékösszeg meghaladta a 95 mm-t. A legcsapadékosabb területek a Dunántúl nyugati részén és a Duna-Tisza közén voltak, egyes helyeken a havi összeg elérte a 200 mm-t is. Ugyanakkor a Tiszántúlon és a Maros mentén mindössze 40 mm hullott.
         Forrás: www.met.hu
+    </ul>  
 <hr>  
         <h2>Hőingás kiszámítása</h2>
 
